@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 deffb94b58af00bb4187e760089a993e3570f189 ChangeLog
+SHA1 aea1623ac6823c9aadbb5c2f0a41f34084bd6db2 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
-SHA1 87bfc8583a74d9ed70053bf14ba0de99628b95b6 MANIFEST
-SHA1 2b92d8882172d27ab71b45e9542b10aeab2ef3e8 META.yml
-SHA1 98b6d185355e8a43bf47faaf4bee196b3e729beb MYMETA.json
-SHA1 ffa409a8255edbea859c24af216d9dd6f9b5e27a MYMETA.yml
-SHA1 72c176f371d83cacdf46f6fb6e5105cd2350b593 Makefile.PL
+SHA1 2b6b8f9fc192662e60281ea9353bfafae92e2774 MANIFEST
+SHA1 000eee09d4b502c5330548837e47590367a8fa1e META.yml
+SHA1 ff35cf1af379307cd2088cf801dcfd3c24c09149 MYMETA.json
+SHA1 1d86d4d631ba1c900fca87906e324e2c894e05d7 MYMETA.yml
+SHA1 41de0beec7df6eb4ccecac98156bc2fa8fb2ce24 Makefile.PL
 SHA1 ffcc80b5c5cbb52f2c2234e9d66f9f32d63f9be7 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 4fe10515de60ffa439d09fbb4eadf7dc1cfd275f bin/fullauto.pl
@@ -41,19 +41,20 @@ SHA1 551c2823cf96291f02abcd273ee4a9c2703bc9ec lib/Net/FullAuto.pm
 SHA1 8a710a48bb21aa584949dbbe3649c0d5b2b084fc lib/Net/FullAuto/Custom/BackUp/README
 SHA1 b9b90c2707951d9d5753dc9ef9699abe7daddee9 lib/Net/FullAuto/Custom/README
 SHA1 7cacb9a2873a4baac0d084529eed8cb78a301248 lib/Net/FullAuto/Distro/fa_code.pm
-SHA1 bf191ccad1f37f926c1d8be94b67bcfeba373e49 lib/Net/FullAuto/Distro/fa_code_demo.pm
+SHA1 45ede5a311a7d3116ca45e7383d75fc47039ea35 lib/Net/FullAuto/Distro/fa_code_demo.pm
 SHA1 faa3cdecc1d47c1941ec95294dc86039e9decd21 lib/Net/FullAuto/Distro/fa_conf.pm
 SHA1 97492773d5021025f3239614db3915e85da625de lib/Net/FullAuto/Distro/fa_host.pm
 SHA1 5e5bf1fb274122e41b89de64d065cfbacc8b2cd6 lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 7563389137eb804672dba8fde06fdaee5f29d295 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 a624f36d14585c7635e2a04cb771e0bf0157c0f7 lib/Net/FullAuto/Distro/fa_menu_demo.pm
+SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
 SHA1 53e03d35121070ed8463c687f98652ba96c50045 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk8c2o4ACgkQ2NfPFcKvV2CYhgCgnRqjhbw0N/h3o5eklisqGMtm
-cJYAn3cUCvCFrH331EBhJvFdysLEkZXu
-=i8o/
+iEYEARECAAYFAk8tnE8ACgkQ2NfPFcKvV2CLxwCeN+PAxAoeBH99EnpouhhVk1Yr
+MVwAnjM57PzCLxYiRLRfUN32LXvSzScS
+=tD7x
 -----END PGP SIGNATURE-----
